# utools

./: .gitignore  LICENSE  README.md  TODO  a.out  mem.1.scd  mem.c  mem.h  mem_linux.c  mem_netbsd.c  meson.build  netbsd.c  netbsd.h  power.1.scd  power.c  power.h  power_linux.c  power_netbsd.c  temp.c  temp.h  temp_linux.c  temp_netbsd.c  timer.1  timer.1.scd  timer.c  util.c  util.h
.git-old/: config  index  packed-refs
.git-old/logs/: HEAD
.git-old/logs/refs/remotes/origin/: HEAD  main
.git-old/objects/pack/: pack-517711a59c0208f14153ede2ebadda57eb4f607b.idx  pack-517711a59c0208f14153ede2ebadda57eb4f607b.pack  pack-517711a59c0208f14153ede2ebadda57eb4f607b.rev
.git-old/refs/heads/: main
